# p9-rag-events

./: .dockeringnore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_interactive_rag.py
.github/workflows/: ci.yml
api/: main.py
data/evaluation/: ragas_results.json  test_set.json
data/processed/: events_dummy.json  events_real.json  faiss_index.faiss  faiss_index.pkl  indexed_texts.json
data/processed/faiss_index/: index.faiss  index.pkl
data/raw/: sample_response.json
docs/: rapport_technique.md
rag/: data_loader.py  embeddings.py  generator.py  langchain_rag.py  retriever.py
scripts/: evaluate_ragas.py  evaluate_ragas_safe.py  fetch_openagenda.py  reindex_with_chunks.py  test_api_full.py  test_chuncking.py  test_clean_html.py
tests/: test_data_loader.py
